fix: authlayoutheader on mobiles

--- a/frontend/src/components/AuthLayoutHeader/AuthLayoutHeader.module.scss
+++ b/frontend/src/components/AuthLayoutHeader/AuthLayoutHeader.module.scss
@@ -10,6 +10,7 @@
   flex-wrap: nowrap;
 
   @include max-md {
+    flex-direction: column;
     align-items: flex-start;
   }
 }
